overflow-fix

--- a/Exercise/Doctor House/style.css
+++ b/Exercise/Doctor House/style.css
@@ -2,6 +2,10 @@
 .body{
      font-family: Source Sans 3; overflow-x: hidden;
 }
+img{
+    max-width: 100%;
+    height: auto;
+}
 /* Header Hero */
 .header{
     background: rgba(7, 51, 47, 1);
